--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,17 @@
 {
+  "name": "pern-todo-backend",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "dotenv": "^16.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
